--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "sass": "^1.77.2",
+    "sass-loader": "^14.2.1",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0"
   }
