--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,7 @@ NUXT_NODE_ENV = production
 
 # 这将覆盖apiSecret的值
 NUXT_API_SECRET = api_secret_token_prod
-NUXT_API_BASE = https://api.prod.com
+NUXT_API_BASE1 = https://api.prod1.com
+NUXT_API_BASE2 = https://api.prod2.com
+NUXT_API_BASE3 = https://api.prod3.com
+NUXT_API_BASE4 = https://api.prod4.com
