--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0"
+    "unplugin-vue-components": "^0.27.0",
+    "@nuxtjs/i18n": "^8.3.1"
   }
 }
